--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -29,7 +29,7 @@
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
     </head>
 
-    <body style="background: #f2fcff;">
+    <body style="background: white;">
         <div>
             <nav id="sidebar">
                 <div class="sidebar-header" style="height: 104px;">
@@ -37,10 +37,10 @@
                 </div>
                 <ul class="list-unstyled components">
                     <li class="active">
-                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
+                        <a href="/HomeLogada/RankingGeral"  aria-expanded="false">Home</a>
                     </li>
                     <li>
-                        <a href="/HomeLogada/Pesquisa" data-toggle="collapse" aria-expanded="false">Pesquisar</a>
+                        <a href="/HomeLogada/Pesquisa"  aria-expanded="false">Pesquisar</a>
                     </li>
                     <li>
                         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Suporte</a>
