--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -6,24 +6,35 @@
 }
 
 <div class="m-5">
+    <section class="pesquisa" style=" width: 2000px;height:104px;background: #0C496BE6;position: absolute;top: 0px;left: -2px;">
 
+      
+
+    </section>
+    <br />
+    <br />
     <div class="row justify-content-center text-center mt-4">
-        <h2>Esses são nossos Destaques da Semana!</h2>
+        <h2 style="color: #D0A748;font-weight: bold; text-shadow: 1px 2px 0px #6c6c6c;margin-bottom: 4rem;margin-top: 8rem;">
+            Esses são nossos Destaques da Semana!
+        </h2>
     </div>
 
     <div class="row">
         <ul class="row list-unstyled m-3">
             @foreach (var item in Model)
-            {
-                <li class="col-12 p-4 mb-3" style="border: 2px solid;">
-                    <div class="row">
-                        <div class="d-flex justify-content-center align-items-center mr-5" style="padding-left: 4rem;">
+            {  
+                 if (item.Plano.Equals("P"))
+                 {
+                    <li class="col-12 p-4 mb-5" style="background: white;box-shadow: 0px 0px 9px black;background: #2c8cb6;
+                         box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;;">
+                        <div class="row">
+                            <div class="d-flex justify-content-center align-items-center mr-5" style="padding-left: 4rem;">
 
-                            <div class="pr-5">
-                                <h2>@(Model.IndexOf(item) + 1)º </h2>
-                            </div>
+                                <div class="pr-5">
+                                    <h2>@(Model.IndexOf(item) + 1)º </h2>
+                                </div>
 
-                            @*<div class="col-10">*@
+                                @*<div class="col-10">*@
                                 @if (item.Imagem64 == "")
                                 {
                                     <img src="~/Content/images/iconecor.png" height="100" width="100" />
@@ -33,11 +44,9 @@
                                     String imagem64 = string.Format("data:image/jpeg;base64,{0}", item.Imagem64); //PRECISA DISSO PRA FUNCIONAR A IMAGEM
                                     <img src="@imagem64" height="100" width="100" />
                                 }
-                            @*</div>*@
-                        </div>
-                        <div class="col-5">
-                            @if (item.Plano.Equals("P"))
-                            {
+                                @*</div>*@
+                            </div>
+                            <div class="col-5">
                                 <div class="d-flex align-items-baseline pl-3">
                                     <h4>
                                         @item.Media
@@ -69,34 +78,89 @@
                                         </div>
                                     </div>
                                 </div>
-                            }
-
-                            <div>
-                                <h3>
-                                    @item.Nome_empresa
-                                </h3>
+                                <div>
+                                    <h2 style="font-weight: bold;">
+                                        @item.Nome_empresa
+                                    </h2>
+                                </div>
+                                <div>
+                                    @item.Nome_categoria
+                                </div>
                             </div>
-                            <p>
-                                @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
-                            </p>
-                        </div>
-                        <div class="col-4 mr-5" style="border-left: 2px solid;padding-left: 5rem;">
-                            <h4 class="mt-0">Descrição: </h4>
-                            <div style="min-height: 69px;height: 77%;border: 1px solid;">
-                                @item.Descricao
+                            <div class="col-4 d-flex justify-content-between mr-5" style="flex-direction:column; border-left: 2px solid;padding-left: 5rem;">
+                              
+                               <h3>"@item.Slogan"</h3>
+                                <p style="color: white;">
+                                    @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
+                                </p>
+                            </div>
+                            <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
+                                <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
+
+                                @*@Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })*@
+                                <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
                             </div>
                         </div>
-                        <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                            <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
+                       
+                    </li>
 
-                            @Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })
-                            @*<a id=""href="/HomeLogada/Perfil">Perfil</a>*@
+                }
+                else
+                {
+                    <li class="col-12 p-4 mb-5" style="background: white;box-shadow: 0px 0px 9px black;">
+                        <div class="row">
+                            <div class="d-flex justify-content-center align-items-center mr-5" style="padding-left: 4rem;">
+
+                                <div class="pr-5">
+                                    <h2>@(Model.IndexOf(item) + 1)º </h2>
+                                </div>
+
+                                @*<div class="col-10">*@
+                                @if (item.Imagem64 == "")
+                                {
+                                    <img src="~/Content/images/iconecor.png" height="100" width="100" />
+                                }
+                                else
+                                {
+                                    String imagem64 = string.Format("data:image/jpeg;base64,{0}", item.Imagem64); //PRECISA DISSO PRA FUNCIONAR A IMAGEM
+                                    <img src="@imagem64" height="100" width="100" />
+                                }
+                                @*</div>*@
+                            </div>
+                            <div class="col-5">
+                                <div class="d-flex align-items-baseline pl-3">
+                                    <h4 style="font-weight: bold;">
+                                        @item.Media
+                                    </h4>  
+                                </div>
+                                <div>
+                                    <h2>
+                                        @item.Nome_empresa
+                                    </h2>
+                                </div>
+                                <div>
+                                    @item.Nome_categoria
+                                </div>
+                                
+                            </div>
+                            <div class="col-4 d-flex justify-content-between mr-5" style="flex-direction:column; border-left: 2px solid;padding-left: 5rem;">
+
+                                <h3>"@item.Slogan"</h3>
+                                <p>
+                                    @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
+                                </p>
+                            </div>
+                            <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
+                                <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
+
+                                @*@Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })*@
+                                <a style="text-decoration: none;color: #2c8cb6;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mt-3 p-2">
-                       Categoria: @item.Nome_categoria
-                    </div>
-                </li>
+                        
+                    </li>
+                }
+
             }
         </ul>
 
