--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -47,7 +47,7 @@
                     </li>
                     <li>
                         @*<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" >Sair</a>*@ 
-                        @Html.ActionLink("Sair", "Sair", "Login", new { area = "" }, new { @class = "" })
+                        @Html.ActionLink("Sair", "Sair", "Home", new { area = "" }, new { @class = "" })
                     </li>
                 </ul>
                 
