--- a/SupplierRanking/Views/Fornecedor/UpdateFuncionarioFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateFuncionarioFornecedor.cshtml
@@ -19,17 +19,17 @@
 
 
                 <br /> <br />  
-                <input type="text" value="@Model.Codigo" name="codigo" placeholder="codigo">
+                <input class="input" type="text" value="@Model.Codigo" name="codigo" placeholder="codigo">
                 <br /> <br />
-                <input type="text" value="@Model.Nome" name="nome" placeholder="nome">
+                <input class="input"type="text" value="@Model.Nome" name="nome" placeholder="nome">
                 <br /> <br />
-                <input type="text" value="@Model.Senha" name="senha" placeholder="senha">
+                <input class="input" type="text" value="@Model.Senha" name="senha" placeholder="senha">
                 <br /> <br />
              
             </div>
 
             <br /> <br />
-            <button id="btnAtualizar">Atualizar</button>
+            <button style="background: #166083;" class="btn btn-info btn-lg"id="btnAtualizar">Atualizar</button>
         </form>
     </div>
 </div>
