--- a/SupplierRanking/Views/Comprador/UpdatePessoaJuridica.cshtml
+++ b/SupplierRanking/Views/Comprador/UpdatePessoaJuridica.cshtml
@@ -9,26 +9,30 @@
 
     <div class="wrap-login100" style="background-color: white;">
 
-        <h2>UpdatePessoaJuridica</h2>
+        <h2>Editar informações</h2>
 
         <form action="../Comprador/UpdatePessoaJuridica" method="post" class="login100-form validate-form">
             <p>@ViewBag.Message</p>
             <!--- Campos do Comprador Fisico -->
             <div>
-                <input type="text" value="@Model.Codigo" name="codigo" readonly="readonly" style="background-color: gray">
-                <input type="text" value="@Model.Cnpj" name="cnpj" readonly="readonly">
-                <input type="text" value="@Model.Nome_empresa" name="nome_empresa">
-                <input type="text" value="@Model.Email" name="email">
+                <input class="input" type="text" value="@Model.Codigo" name="codigo" readonly="readonly" style="background-color: gray">
                 <br /> <br />
-                <input type="text" value="@Model.Uf" name="uf">
+                <input class="input" type="text" value="@Model.Cnpj" name="cnpj" readonly="readonly">
                 <br /> <br />
-                <input type="text" value="@Model.Telefone" name="telefone" placeholder="(00) 0000-0000">
-                <input type="text" value="@Model.Celular" name="celular" placeholder="(00) 00000-0000">
+                <input class="input"  type="text" value="@Model.Nome_empresa" name="nome_empresa">
+                <br /> <br />
+                <input class="input" type="text" value="@Model.Email" name="email">
+                <br /> <br />
+                <input class="input" type="text" value="@Model.Uf" name="uf">
+                <br /> <br />
+                <input class="input" type="text" value="@Model.Telefone" name="telefone" placeholder="(00) 0000-0000">
+                <br /> <br />
+                <input class="input" type="text" value="@Model.Celular" name="celular" placeholder="(00) 00000-0000">
                 <br /> <br />
             </div>
 
             <br /> <br />
-            <button id="btnSalvar">Salvar</button>
+            <button style="background: #166083;" class="btn btn-info btn-lg" id="btnAtualizar">Atualizar</button>
         </form>
     </div>
 </div>
