--- a/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
@@ -8,7 +8,7 @@
 
     <div class="wrap-login100" style="background-color: white;">
 
-        <h2>update Fornecedor</h2>
+        <h2>Edite suas informações</h2>
         <form action="../Fornecedor/UpdateFornecedor" method="post" class="login100-form validate-form" enctype="multipart/form-data">
 
             <!--- Campos do Fornecedor -->
@@ -20,38 +20,39 @@
                 <br /> <br />
                 @*<input type="text" name="confirmaSenha" placeholder="Digite sua senha">*@                
                 <br /> <br />          
-                <input type="text" value="@Model.Cnpj" name="cnpj" placeholder="CNPJ">
+                <input class="input" type="text" value="@Model.Cnpj" name="cnpj" placeholder="CNPJ">
                 <br /> <br />
-                <input type="text" value="@Model.Nome_empresa" name = "nome_empresa" placeholder="Nome da Empresa">
+                <input class="input" type="text" value="@Model.Nome_empresa" name = "nome_empresa" placeholder="Nome da Empresa">
                 <br /> <br />
-                <input type="text" value="@Model.Email" name="email" placeholder="Email">                             
+                <input class="input" type="text" value="@Model.Email" name="email" placeholder="Email">                             
                 <br /> <br />
-                <input type="text" value="@Model.Cep" name="cep" placeholder="CEP">
+                <input class="input" type="text" value="@Model.Cep" name="cep" placeholder="CEP">
                 <br /> <br />
-                <input type="text" value="@Model.Endereco" name="endereco" placeholder="Endereço">
+                <input class="input" type="text" value="@Model.Endereco" name="endereco" placeholder="Endereço">
                 <br /> <br />
-                <input type="text" value="@Model.Bairro" name="bairro" placeholder="Bairro">
+                <input class="input" type="text" value="@Model.Bairro" name="bairro" placeholder="Bairro">
                 <br /> <br />
-                <input type="text" value="@Model.Cidade" name="cidade" placeholder="Cidade">
+                <input class="input" type="text" value="@Model.Cidade" name="cidade" placeholder="Cidade">
                 <br /> <br />
-                <input type="text" value="@Model.Uf" name="uf" placeholder="UF">
+                <input class="input" type="text" value="@Model.Uf" name="uf" placeholder="UF">
                 <br /> <br />
-                <input type="text" value="@Model.Telefone" name="telefone" placeholder="(00) 0000-0000">
-                <input type="text" value="@Model.Celular" name="celular" placeholder="(00) 00000-0000">
+                <input class="input" type="text" value="@Model.Telefone" name="telefone" placeholder="(00) 0000-0000">
                 <br /> <br />
-                <input type="text" value="@Model.Slogan" name="slogan" placeholder="Digite o seu slogan!">
+                 <input class="input" type="text" value="@Model.Celular" name="celular" placeholder="(00) 00000-0000">
                 <br /> <br />
-                <input type="text" value="@Model.Descricao" name="descricao" placeholder="Uma breve descrição">
+                <input class="input" type="text" value="@Model.Slogan" name="slogan" placeholder="Digite o seu slogan!">
                 <br /> <br />
-                <input type="text" value="@Model.Nome_categoria" name="nome_categoria" placeholder="categoria">
+                <input class="input" type="text" value="@Model.Descricao" name="descricao" placeholder="Uma breve descrição">
+                <br /> <br />
+                <input class="input" type="text" value="@Model.Nome_categoria" name="nome_categoria" placeholder="categoria">
                 <br /> <br />             
-                <input type="file" name="Imagem" />
+                <input class="button"  type="file" name="Imagem" />
                 <br /> <br />
 
             </div>
 
             <br /> <br />
-            <button id="btnAtualizar">Atualizar</button>
+            <button style="background: #166083;" class="btn btn-info btn-lg" id="btnAtualizar">Atualizar</button>
         </form>
     </div>
 </div>
