--- a/SupplierRanking/Content/css/cadastro.css
+++ b/SupplierRanking/Content/css/cadastro.css
@@ -236,7 +236,7 @@
     overflow-y: auto;
 }
 
-.form-forn-forth-part .input-image,
+.wrap-cadastro-fornecedor .input-image,
 .form-forn-forth-part .input-images {
     width: 20em;
     height: 20em;
@@ -244,8 +244,8 @@
 }
 
 .form-forn-forth-part .input-images {
-    width: 10em;
-    height: 10em;
+    width: 4em;
+    height: 4em;
 }
 
 .form-forn-forth-part .input-image-default {
@@ -260,7 +260,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-height: 330px;
+    width: 100%;
+    max-height: 150px;
     overflow: auto;
 }
 
@@ -269,7 +270,6 @@
     margin: 1em .3em;
     display: flex;
     align-items: center;
-    /*flex-wrap: wrap;*/
 }
 
 .form-forn-forth-part #imagensCarregada .image-wrapper img {
