Val - Cadastro Fornecedor

--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -37,7 +37,7 @@
                                 @*<div class="col-10">*@
                                 @if (item.Imagem64 == "")
                                 {
-                                    <img src="~/Content/images/iconecor.png" height="100" width="100" />
+                                    <img src="/Content/images/iconecor.png" height="100" width="100" />
                                 }
                                 else
                                 {
